--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "flux": "^3.1.3",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
